--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "mongoose": "^7.4.3",
     "next": "13.4.10",
     "next-auth": "^4.22.1",
     "postcss": "8.4.26",
