--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^1.0.0",
+    "@aws-sdk/client-s3": "^3.391.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
+    "multiparty": "^4.2.3",
     "next": "13.4.10",
     "next-auth": "^4.22.1",
     "postcss": "8.4.26",
